# ai-microservice-demo

./: .gitignore  README.md  adapter-values.yaml  buf.gen.yaml  deploy copy.sh  deploy.sh  docker-compose.yml  go-gateway-hpa.yaml  go-gateway-monitor.yaml  go-gateway.yaml  ollama-svc.yaml  prometheus.yml  python-ai.yaml
proto/: iris.proto
proto/iris/v1/: iris.proto
proto/model/v1/: model.proto
service_go/: Dockerfile  go.mod  go.sum  main.go
service_go/config/: config.go
service_go/grpcclient/: client.go
service_go/handlers/: health.go  iris.go  model.go
service_go/matrics/: matrics.go
service_go/router/: router.go
service_go/telemetry/: tracer.go
service_python/: Dockerfile  README.md  gpu_exporter.py  main.py  observability.py  pyproject.toml  server.py  test.py
service_python/models/: __init__.py  iris_predictor.py  ollama_predictor.py
test/: test.js
