[project]
name = "service-go"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-grpc>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "protobuf>=6.33.4",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]
[tool.pyright]
extraPaths = ["./gen"]
