[project]
name = "service-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.0",
    "scikit-learn>=1.6.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-grpc>=0.50b0",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "protobuf>=6.33.5",
    "pydantic>=2.12.5",
    "gpustat>=1.1.1",
    "prometheus-client>=0.24.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
